- Fixed text inside of essay description - Slightly increased opacity for better readability - Premium essays now have a gold star - Temp tab replaced with free essays tab

--- a/home/home.css
+++ b/home/home.css
@@ -131,6 +131,13 @@ body {
     opacity: 0.8;
 }
 
+.premium {
+    width: 1.25rem;
+    position: absolute;
+    left: 0.4rem;
+    top: 0.4rem;
+}
+
 .empty {
     height: 0;
     margin: 0 0.9375rem;
@@ -155,18 +162,20 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background-color: rgba(211, 211, 211, 0.8);
+    background-color: rgba(211, 211, 211, 0.85);
 }
 
 .desc p {
+    text-align: left;
+    width: 100%;
     font-size: 0.9rem;
     float: left;
-    margin: 0 1rem;
+    padding: 0 1rem;
 }
 
 .essaytitle {
     font-weight: bold;
-    padding-bottom: 0.8rem;
+    margin-bottom: 0.8rem;
 }
 
 .buttonbar {
